# roll

./: .env.example  .pre-commit-config.yaml  .pyre_configuration  README.md  pyproject.toml
config/: auto-reply-content-gen.aiconfig.json  auto-reply-template.html
src/roll/: config.py  data.py  email.py  image.py  io.py  models.py  utils.py
tools/: cli.py  streamlit_ui.py
